--- a/views/sign_in.erb
+++ b/views/sign_in.erb
@@ -1,7 +1,7 @@
-<form action='/login' method='post'>
+<form action='/signin' method='post'>
   <label for="username">Username:</label>
-  <input id="username" type="text"><br>
+  <input id="username" name="username" type="text"><br>
   <label for="password">password:</label>
-  <input id="password" type="text"><br>
+  <input id="password" name="password" type="text"><br>
   <input type='submit' value="login">
 </form>
