--- a/views/layout.erb
+++ b/views/layout.erb
@@ -19,7 +19,7 @@
       <ul>
         <li> <a href='/survey'>Survey</a> </li>
         <% if signed_in? %>
-          <li> Results </li>
+          <li> <a href='/results'>Results</a></li>
           <li> <a href='/signout'> Sign out </a></li>
         <% else %>
           <li><a href='/signin'>Sign In</a></li>
