--- a/views/results.erb
+++ b/views/results.erb
@@ -1,3 +1,25 @@
+<h3>Results Sumary</h3>
+<table>
+  <tr>
+    <th>Number of responses</th>
+    <th>Q1 Response A</th>
+    <th>Q1 Response B</th>
+    <th>Q2 Response A</th>
+    <th>Q2 Response B</th>
+    <th>Q3 Response A</th>
+    <th>Q3 Response B</th>
+  <tr>
+  <tr>
+    <td><%= @response_summary[0] %></td>
+    <td><%= @response_summary[1] %></td>
+    <td><%= @response_summary[2] %></td>
+    <td><%= @response_summary[3] %></td>
+    <td><%= @response_summary[4] %></td>
+    <td><%= @response_summary[5] %></td>
+    <td><%= @response_summary[6] %></td>
+  </tr>
+</table>
+
 <h3> All Survey Results </h3>
 
 <table>
