--- a/views/layout.erb
+++ b/views/layout.erb
@@ -17,6 +17,7 @@
     </div>
     <div class='nav_bar'>
       <ul>
+        <li><a href='/'>Home</a></li>
         <li> <a href='/survey'>Survey</a> </li>
         <% if signed_in? %>
           <li> <a href='/results'>Results</a></li>
