--- a/views/results.erb
+++ b/views/results.erb
@@ -8,7 +8,7 @@
     <th>Q2 Response B</th>
     <th>Q3 Response A</th>
     <th>Q3 Response B</th>
-  <tr>
+  </tr>
   <tr>
     <td><%= @response_summary[0] %></td>
     <td><%= @response_summary[1] %></td>
@@ -24,12 +24,15 @@
 
 <table>
   <tr>
-    <th>ID</th>
-    <th>Created On</th>
-    <th>Name</th>
-    <th>Q1</th>
-    <th>Q2</th>
-    <th>Q3</th>
+    <th><a href="/results/id">ID</a></th>
+    <th><a href="/results/created_on">Created On</a></th>
+    <th><a href="/results/name">Name</a></th>
+    <th><a href="/results/q1">Q1</a></th>
+    <th><a href="/results/q2">Q2</a></th>
+    <th><a href="/results/q3">Q3</a></th>
+    <th></th>
   </tr>
   <%= responses_in_rows(@survey_data) %>
 </table>
+
+<%# <img src="/images/my23_tanuki_blue.jpg" width="600" heigh="400"> %>
